--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Muhammed Salman: Reach Me</title>
+	<title>MOHAMMED DANISH: Reach Me</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
@@ -67,7 +67,7 @@
 	
 	<footer>
 		<div>
-			&copy;2018 All rights reserved - Muhammed Salman Shamsi	
+			&copy;2018 All rights reserved - MOHAMMED DANISH	
 		</div>
 	</footer>
 </body>
