--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<main>
 		<div class="myphoto">
 			<figure>
-				<img src="img/myphoto.png"/>
+				<img src="img/phone.svg"/>
 			</figure>
 			<h1>
-				Muhammed Salman Shamsi
+				ANSARI MOHAMMED DANISH MOHAMMED SALIM
 			</h1>	
 		</div>
 
@@ -65,7 +65,7 @@
 	
 	<footer>
 		<div>
-			&copy;2018 All rights reserved - Muhammed Salman Shamsi	
+			&copy;2018 All rights reserved - MOHAMMED DANISH	
 		</div>
 	</footer>
 </body>
