--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
 <head>
 	<title>MOHAMMED DANISH: Reach Me</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+
+
 </head>
 <body>
 	<header>
@@ -53,15 +56,15 @@
 		<div class="social-media">
 			<h3>Get Connected</h3>
 
-			<a href="https://facebook.com"><i></i>Facebook</a>
+			<a href="https://facebook.com"><i class="fab fa-facebook"></i>Facebook</a>
 
-			<a href="https://twitter.com"><i></i>Twitter</a>
+			<a href="https://twitter.com"><i <i class="fab fa-twitter-square"></i></i>Twitter</a>
 			
-			<a href="https://linkedin.com"><i></i>LinkedIn</a>
+			<a href="https://linkedin.com"><i <i class="fab fa-linkedin"></i></i>LinkedIn</a>
 			
-			<a href="https://github.com"><i></i>Github</a>
+			<a href="https://github.com"><i <i class="fab fa-github"></i></i>Github</a>
 			
-			<a href="https://stackoverflow.com"><i></i>StackOverflow</a>
+			<a href="https://stackoverflow.com"><i <i class="fab fa-stack-overflow"></i></i>StackOverflow</a>
 		</div>
 	</main>
 	
