--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Muhammed Salman: Gallery</title>
+	<title>MOHAMMED DANISH: Gallery</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
@@ -22,41 +22,45 @@
 	</header>
 
 	<main>
-		<h1>Gallery</h1>
-		<figure>
-			<img src="img/cactus.jpg" alt="Cactus Plant">
-			<figcaption>A cactus plant</figcaption>
-		</figure>
+	<h1>Gallery</h1>
 
-		<figure>
-			<img src="img/arrangement.jpg" alt="A flower">
-			<figcaption>Flowers</figcaption>
-		</figure>
+	    <div class="gallery">
+		    
+			<figure>
+				<img src="img/cactus.jpg" alt="Cactus Plant">
+				<figcaption>A cactus plant</figcaption>
+			</figure>
 
-		<figure>
-			<img src="img/beach.jpg" alt="A beach">
-			<figcaption>A beautiful beach</figcaption>
-		</figure>
+			<figure>
+				<img src="img/arrangement.jpg" alt="A flower">
+				<figcaption>Flowers</figcaption>
+			</figure>
 
-		<figure>
-			<img src="img/clock" alt="A Clock">
-			<figcaption>A Clock</figcaption>
-		</figure>
+			<figure>
+				<img src="img/beach.jpg" alt="A beach">
+				<figcaption>A Beautiful Beach</figcaption>
+			</figure>
 
-		<figure>
-			<img src="img/mobile-phone.jpg" alt="A mobile phone">
-			<figcaption>A Mobile Phone</figcaption>
-		</figure>
+			<figure>
+				<img src="img/clock.svg" alt="A Clock">
+				<figcaption>A Clock</figcaption>
+			</figure>
 
-		<figure>
-			<img src="img/mobile.jpg" alt="A Mobile">
-			<figcaption>Another Mobile</figcaption>
-		</figure>
+			<figure>
+				<img src="img/mobile-phone.jpg" alt="A mobile phone">
+				<figcaption>Keypad Mobile</figcaption>
+			</figure>
+
+			<figure>
+				<img src="img/mobile.jpg" alt="A Mobile">
+				<figcaption>Iphone X</figcaption>
+			</figure>
+		</div>	
 	</main>
 	
 	<footer>
 		<div>
-			&copy;2018 All rights reserved - Muhammed Salman Shamsi	
+			&copy;2018 All rights reserved - MOHAMMED DANISH	
 		</div>
 	</footer>
 </body>
