--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Muhammed Salman: A web Developer</title>
+	<title>MOHAMMED DANISH: A Web Developer</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
@@ -24,7 +24,7 @@
 	<main>
 		<div class="myphoto">
 			<figure>
-				<img src="img/phone.svg"/>
+				<img src="img/d.jpeg"/>
 			</figure>
 			<h1>
 				ANSARI MOHAMMED DANISH MOHAMMED SALIM
@@ -68,5 +68,6 @@
 			&copy;2018 All rights reserved - MOHAMMED DANISH	
 		</div>
 	</footer>
+	<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
